# Netra3.0

./: .gitignore  intent_classification_results.json  main.js  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 39c87dc44064_renamed_column_mission_config_table.py  63e81db748b4_renamed_column_add_fk_mission_config_.py  657b230b610b_added_new_tables.py  9c2c19c41161_initial_migration.py  a65a04270df2_removed_ship_id_from_system_table.py  d8fabb28942d_add_overhaul_tables.py  e17c8ad27b4f_added_mission_config_table.py  fe199ed4b651_add_systems_table_and_system_id_to_.py
backend/: chat_UI.py  config.py  core.py  memory.pkl
backend/api/: core.py  memory.pkl
backend/api/db/: connection.py  dependencies.py  repositories.py  schemaAwareSQL.py
backend/api/deambiguate/: deambiguate.py
backend/api/models/: Overhaul.py  __init__.py  etl.py  mission_configuration.py  reliability.py  sensor.py  ship_configuration.py  systemconfiguration.py  users.py
backend/api/routes/: ai.py  auth.py  chat.py  config_routes.py  overhaul.py  reliability.py  sensor.py  users.py  (+2 more)
backend/auth/: security.py
backend/drishti/: ai_agent.py  drishti.py  llm_client.py
backend/mcp/: llm.py  llm_service.py  prompts.py  tool_executor.py
backend/mission_configuration/: mission_configuration.py
backend/reliabilty/: relformulas.py
backend/sensor/: rul.py  sensors.py
backend/utils/: config.yaml  logging_config.py  tablecolumns.json  utils.py
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
(+1980 files in other folders)
